NEWS for vmdb2, the Debian disk image builder
=============================================================================

Version 0.22+git, not yet released
-----------------------------------------------------------------------------


Version 0.22, released 2021-01-16
-----------------------------------------------------------------------------

* This release has a lot of changes from Ryutaroh Matsumoto and
  Christian Kastner to fix and clean up things, and to add support for
  building images for I385 (UEFI and BIOS), armhf+UEFI, and ppc64el.


Version 0.21, released 2020-12-18
-----------------------------------------------------------------------------

* The grub plugin is able to install the UEFI version of grub on arm64
  targets, patch from David Edmondson.[

* The documentation tile for the `resize_rootfs` step is now fixed.


Version 0.20, released 2020-10-18
-----------------------------------------------------------------------------

* All use of the Python `cliapp` library has been dropped from vmdb2 now.

* New step `resize-rootfs` adds a systemd service to resize the root
  file system to fit the actual drive on boot.


Version 0.19, released 2020-09-16
-----------------------------------------------------------------------------

Change in this release are entirely internal code changes that should
not affect users of vmdb2.

* Python Code has been formatted with the Black code formatting tool.

* Changes have been made towards dropping the dependency on the
  `cliapp` library: the Python standard library module `subprocess` is
  used instead of `cliapp.runcmd`, and the `cliapp` plugin system has
  been replaced with a custom one.


Version 0.18, released 2020-08-13
-----------------------------------------------------------------------------

* The way the manual was formatted could sometimes lead to different
  plugins' documentation being merged into the same section. This has
  now been fixed.


Version 0.17, released 2020-07-13